# ishare

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  DEVELOPER_SETUP.md  Dockerfile  ERROR_HANDLING_IMPROVEMENT_PLAN.md  LICENSE  PHASE1_DETAILED_ANALYSIS.md  README.md  SIZE_OPTIMIZATION_STRATEGIES.md  clippy.toml  docker_buildx.sh  genome.toml  ibdutils_index.html
.zed/: settings.json
examples/: ex_snafu.rs
ishare-lib/: Cargo.toml
ishare-lib/gmap/: Pf3D7_01_v3.map  Pf3D7_02_v3.map  Pf3D7_03_v3.map  Pf3D7_04_v3.map  Pf3D7_05_v3.map  Pf3D7_06_v3.map  Pf3D7_07_v3.map  Pf3D7_08_v3.map  Pf3D7_09_v3.map  Pf3D7_10_v3.map  Pf3D7_11_v3.map  Pf3D7_12_v3.map  Pf3D7_13_v3.map  Pf3D7_14_v3.map
ishare-lib/src/: container.rs  genome.rs  genotype.rs  gmap.rs  indiv.rs  io.rs  lib.rs  rfmix.rs  share.rs  site.rs  stat.rs  tests.rs  traits.rs  utils.rs  vcf.rs
ishare-lib/src/container/: histogram.rs  intervals.rs  intervaltree.rs
ishare-lib/src/genotype/: afreq.rs  common.rs  rare.rs
ishare-lib/src/rfmix/: asibd.rs  fb.rs  msp.rs
ishare-lib/src/share/: ibd.rs  mat.rs
ishare-lib/src/share/ibd/: coverage.rs  ibdseg.rs  ibdset.rs  overlap.rs  peak.rs
ishare-lib/src/stat/: xirs.rs  xirs.rs.bak
ishare-lib/tests/: test_ibdutils_cmp.py  test_ibdutils_plotibd.sh
ishare-py/: Cargo.toml
ishare-py/src/: lib.rs
ishare-skato/: Cargo.toml  build.rs
ishare-skato/c_src/: qfc.c
ishare-skato/src/: cffi.rs  lib.rs  preprocess.rs
ishare-skato/testdata/: ex_data_yb  ex_data_z
ishare_py/: Cargo.toml  isharepy.pyi  pyproject.toml
ishare_py/src/: lib.rs
skato-rs/: Cargo.toml  build.rs
skato-rs/src/: lib.rs  preprocess.rs
skato-rs/testdata/: ex_data_x  ex_data_yc
src/: container.rs  genome.rs  genotype.rs  gmap.rs  indiv.rs  io.rs  lib.rs  rfmix.rs  share.rs  site.rs  stat.rs  tests.rs  utils.rs  vcf.rs
src/container/: histogram.rs  intervals.rs  intervaltree.rs
src/genotype/: afreq.rs  common.rs  rare.rs
src/rfmix/: asibd.rs  fb.rs  msp.rs
src/share/: ibd.rs  mat.rs  pairs.rs
src/share/ibd/: coverage.rs  ibdseg.rs  ibdset.rs  overlap.rs  peak.rs
src/stat/: xirs.rs
testdata/: Readme.md  genome.toml  sample_name_map.txt  sample_order.txt  samples.d2h.txt  samples.dip.txt  samples.h2d.txt  sim.py  sim_sel.sh
tests/: test_ibdutils_cmp.py  test_ibdutils_plotibd.sh
