[package]
name = "ishare"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "41.0.0"
bitvec = { version = "1.0.1", features = ["serde"] }
bstr = "1.5.0"
itertool = "0.1.0"
itertools = "0.10.5"
parquet = "41.0.0"
serde = { version = "1.0.164", features = ["derive"] }
smallvec = "1.10.0" # used by intervaltree
toml = "0.7.4"
rust-htslib = { version = "*", default-features = false }
rayon = "1.7.0"
clap = { version = "4.3.3", features = ["derive", "wrap_help"] }
csv = "1.2.2"
statrs = "0.16.0"
ahash = "0.8.3"
plotters = { version = "0.3.5", default-features = false, features = [
    "svg_backend",
    "line_series",
    "point_series",
] }
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
rand = "0.8.5"
skato-rs = { path = "../skato-rs", optional = true}
log = "0.4.20"
env_logger = "0.10.0"
slice-group-by = "0.3.1"

[features]
skato = ["dep:skato-rs"]