[workspace]
members = [
    "ishare-lib", # package name: ishare
    "ishare-skato", # package name: skato
    "ishare-py", # package name: isharepy
]
default-members = [
    "ishare-lib", # package name: ishare
]
resolver = "2"

[profile.release.package."*"]
debug = false

[profile.release]
# need to  better show backtrace and debug information
debug = true
