[package]
name = "ishare"
version = "0.1.11"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-array = "57.1.0"
arrow-schema = "57.1.0"
arrow-buffer = "57.1.0"
parquet = {version = "57.1.0", default-features = false, features = ["arrow"]}
bitvec = { version = "1.0.1", features = ["serde"] }
bstr = "1.5.0"
itertools = "0.10.5"
serde = { version = "1.0.164", features = ["derive"] }
smallvec = "1.10.0" # used by intervaltree
toml = "0.7.4"
rust-htslib = { version = "*", default-features = false }
rayon = "1.10.0"
clap = { version = "4.3.3", features = ["derive", "wrap_help"] }
csv = "1.2.2"
statrs = "0.16.0"
ahash = "0.8.3"
plotters = { version = "0.3.5", default-features = false, features = [
    "svg_backend",
    "line_series",
    "point_series",
], optional = true }
axum = { version = "0.6.20", optional = true }
tokio = { version = "1.32.0", features = ["rt-multi-thread"], optional = true }
hyper = { version = "0.14.32", optional = true}
rand = "0.8.5"
skato = { path = "../ishare-skato", optional = true }
log = "0.4.20"
env_logger = "0.10.0"
slice-group-by = "0.3.1"
bincode = "1.3.3"
snafu = "0.8.6"
regex = "1.11.1"
chrono = "0.4.42"

[dev-dependencies]
tempfile = "3.0"

[features]
# # need to fix this so can build binary with skato functionality
skato = ["dep:skato"]
plotibd = ["dep:plotters", "dep:tokio", "dep:axum", "dep:hyper"]

[profile.release]
# need to  better show backtrace and debug information
debug = true
