[package]
name = "ishare"
version = "0.1.12"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-array = "57.1.0"
arrow-schema = "57.1.0"
arrow-buffer = "57.1.0"
parquet = {version = "57.1.0", default-features = false, features = ["arrow", "snap"]}
bitvec = { version = "1.0.1", features = ["serde"] }
bstr = "1.12.1"
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
smallvec = "1.15.1" # used by intervaltree
toml = "0.9.8"
rust-htslib = { version = "*", default-features = false }
rayon = "1.11.0"
clap = { version = "4.5.53", features = ["derive", "wrap_help"] }
csv = "1.4.0"
statrs = "0.18.0"
ahash = "0.8.12"
plotters = { version = "0.3.7", default-features = false, features = [
    "svg_backend",
    "line_series",
    "point_series",
], optional = true }
axum = { version = "0.8.7", optional = true }
tokio = { version = "1.48.0", features = ["rt-multi-thread"], optional = true }
hyper = { version = "1.8.1", optional = true}
rand = "0.9.2"
skato = { path = "../ishare-skato", optional = true }
log = "0.4.29"
env_logger = "0.11.8"
slice-group-by = "0.3.1"
bincode = "2.0.1"
snafu = "0.8.9"
regex = "1.12.2"
chrono = "0.4.42"

[dev-dependencies]
tempfile = "3.23.0"

[features]
# # need to fix this so can build binary with skato functionality
skato = ["dep:skato"]
plotibd = ["dep:plotters", "dep:tokio", "dep:axum", "dep:hyper"]
