[package]
name = "isharepy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "isharepy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27"
# arrow = { version = "41.0.0", features = ["pyarrow"] }
ishare = { path = "../ishare-lib" }
chrono = "0.4.42"
ahash = "0.8.12"
numpy = "0.27.0"
itertools = "0.14.0"
rayon = "1.11.0"
snafu = "0.8.9"

