[package]
name = "skato-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.148"
ndarray = { version = "0.15.6", features = ["blas"] }

# NOTES on openlbas: 
# 
# 1. on mac use, it is easier to use system openblas
# brew install openblas
# export PKG_CONFIG_PATH="/usr/local/opt/openblas/lib/pkgconfig"
# # then change ndarray-glm/ndarray-linalg features to "openblas-system"
# 2. on linux
# it is easier to just compile from source by 
# changing ndarray-glm/ndarray-linalg features to "openblas-static"
 

# for logistic regression
ndarray-glm = { version = "0.0.12", features = ["openblas-static"] }

# for matrix decomposition
ndarray-linalg = { version = "0.16", features = ["openblas-static"] }

# for numerical integration
peroxide = "0.34.1"

# for chisquare distribution
statrs = "0.16.0"
[build-dependencies]
cc = "1.0.83"
